--- a/deploy/crds/group.lynx.smartx.com_groupmemberspatches.yaml
+++ b/deploy/crds/group.lynx.smartx.com_groupmemberspatches.yaml
@@ -23,15 +23,8 @@ spec:
             description: GroupMember represents resource member to be populated in
               Groups.
             properties:
-              ips:
-                items:
-                  description: IPAddress is net ip address, can be ipv4 or ipv6. Format
-                    like 192.168.10.12 or fe80::488e:b1ff:fe37:5414
-                  pattern: ^(((([1]?\d)?\d|2[0-4]\d|25[0-5])\.){3}(([1]?\d)?\d|2[0-4]\d|25[0-5]))|([\da-fA-F]{1,4}(\:[\da-fA-F]{1,4}){7})|(([\da-fA-F]{1,4}:){0,5}::([\da-fA-F]{1,4}:){0,5}[\da-fA-F]{1,4})$
-                  type: string
-                type: array
-              vportReference:
-                description: VPortReference maintains the reference to the VPort.
+              endpointReference:
+                description: EndpointReference maintains the reference to the Endpoint.
                 properties:
                   externalIDName:
                     type: string
@@ -41,8 +34,15 @@ spec:
                 - externalIDName
                 - externalIDValue
                 type: object
+              ips:
+                items:
+                  description: IPAddress is net ip address, can be ipv4 or ipv6. Format
+                    like 192.168.10.12 or fe80::488e:b1ff:fe37:5414
+                  pattern: ^(((([1]?\d)?\d|2[0-4]\d|25[0-5])\.){3}(([1]?\d)?\d|2[0-4]\d|25[0-5]))|([\da-fA-F]{1,4}(\:[\da-fA-F]{1,4}){7})|(([\da-fA-F]{1,4}:){0,5}::([\da-fA-F]{1,4}:){0,5}[\da-fA-F]{1,4})$
+                  type: string
+                type: array
             required:
-            - vportReference
+            - endpointReference
             type: object
           type: array
         apiVersion:
@@ -75,15 +75,8 @@ spec:
             description: GroupMember represents resource member to be populated in
               Groups.
             properties:
-              ips:
-                items:
-                  description: IPAddress is net ip address, can be ipv4 or ipv6. Format
-                    like 192.168.10.12 or fe80::488e:b1ff:fe37:5414
-                  pattern: ^(((([1]?\d)?\d|2[0-4]\d|25[0-5])\.){3}(([1]?\d)?\d|2[0-4]\d|25[0-5]))|([\da-fA-F]{1,4}(\:[\da-fA-F]{1,4}){7})|(([\da-fA-F]{1,4}:){0,5}::([\da-fA-F]{1,4}:){0,5}[\da-fA-F]{1,4})$
-                  type: string
-                type: array
-              vportReference:
-                description: VPortReference maintains the reference to the VPort.
+              endpointReference:
+                description: EndpointReference maintains the reference to the Endpoint.
                 properties:
                   externalIDName:
                     type: string
@@ -93,8 +86,15 @@ spec:
                 - externalIDName
                 - externalIDValue
                 type: object
+              ips:
+                items:
+                  description: IPAddress is net ip address, can be ipv4 or ipv6. Format
+                    like 192.168.10.12 or fe80::488e:b1ff:fe37:5414
+                  pattern: ^(((([1]?\d)?\d|2[0-4]\d|25[0-5])\.){3}(([1]?\d)?\d|2[0-4]\d|25[0-5]))|([\da-fA-F]{1,4}(\:[\da-fA-F]{1,4}){7})|(([\da-fA-F]{1,4}:){0,5}::([\da-fA-F]{1,4}:){0,5}[\da-fA-F]{1,4})$
+                  type: string
+                type: array
             required:
-            - vportReference
+            - endpointReference
             type: object
           type: array
         updatedGroupMembers:
@@ -102,15 +102,8 @@ spec:
             description: GroupMember represents resource member to be populated in
               Groups.
             properties:
-              ips:
-                items:
-                  description: IPAddress is net ip address, can be ipv4 or ipv6. Format
-                    like 192.168.10.12 or fe80::488e:b1ff:fe37:5414
-                  pattern: ^(((([1]?\d)?\d|2[0-4]\d|25[0-5])\.){3}(([1]?\d)?\d|2[0-4]\d|25[0-5]))|([\da-fA-F]{1,4}(\:[\da-fA-F]{1,4}){7})|(([\da-fA-F]{1,4}:){0,5}::([\da-fA-F]{1,4}:){0,5}[\da-fA-F]{1,4})$
-                  type: string
-                type: array
-              vportReference:
-                description: VPortReference maintains the reference to the VPort.
+              endpointReference:
+                description: EndpointReference maintains the reference to the Endpoint.
                 properties:
                   externalIDName:
                     type: string
@@ -120,8 +113,15 @@ spec:
                 - externalIDName
                 - externalIDValue
                 type: object
+              ips:
+                items:
+                  description: IPAddress is net ip address, can be ipv4 or ipv6. Format
+                    like 192.168.10.12 or fe80::488e:b1ff:fe37:5414
+                  pattern: ^(((([1]?\d)?\d|2[0-4]\d|25[0-5])\.){3}(([1]?\d)?\d|2[0-4]\d|25[0-5]))|([\da-fA-F]{1,4}(\:[\da-fA-F]{1,4}){7})|(([\da-fA-F]{1,4}:){0,5}::([\da-fA-F]{1,4}:){0,5}[\da-fA-F]{1,4})$
+                  type: string
+                type: array
             required:
-            - vportReference
+            - endpointReference
             type: object
           type: array
       required:
