add DefaultPolicyRule field for PolicyRule

--- a/deploy/crds/policyrule.lynx.smartx.com_policyrules.yaml
+++ b/deploy/crds/policyrule.lynx.smartx.com_policyrules.yaml
@@ -38,6 +38,8 @@ spec:
           properties:
             action:
               type: string
+            defaultPolicyRule:
+              type: boolean
             direction:
               type: string
             dstIpAddr:
