--- a/codecov.yaml
+++ b/codecov.yaml
@@ -1,5 +1,9 @@
 codecov:
   require_ci_to_pass: yes
+  status:
+    project: no
+    patch: no
+    changes: no
 
 comment:
   layout: "reach,diff,tree"
