add e2e environmental setup shell script

--- a/deploy/lynx-agent/rolebinding.yaml
+++ b/deploy/lynx-agent/rolebinding.yaml
@@ -2,16 +2,16 @@
 apiVersion: rbac.authorization.k8s.io/v1
 kind: ClusterRoleBinding
 metadata:
-  name: lynx-controller
+  name: lynx-agent
 roleRef:
   apiGroup: rbac.authorization.k8s.io
   kind: ClusterRole
-  name: lynx-controller
+  name: lynx-agent
 subjects:
   - kind: ServiceAccount
-    name: lynx-controller
+    name: lynx-agent
     namespace: kube-system
   - apiGroup: rbac.authorization.k8s.io
     kind: User
     # support use certs authentication
-    name: lynx-controller
+    name: lynx-agent
