--- a/deploy/crds/security.lynx.smartx.com_securitypolicies.yaml
+++ b/deploy/crds/security.lynx.smartx.com_securitypolicies.yaml
@@ -81,9 +81,10 @@ spec:
                       RFC 1123.
                     type: string
                   ports:
-                    description: List of destination ports for outgoing traffic. This
-                      field must not empty. Each item in this list is combined using
-                      a logical OR.
+                    description: List of destination ports for outgoing traffic. If
+                      this field is empty or missing, this rule matches all ports
+                      and protocols. Each item in this list is combined using a logical
+                      OR.
                     items:
                       description: SecurityPolicyPort describes the port and protocol
                         to match in a rule.
@@ -142,7 +143,6 @@ spec:
                     type: object
                 required:
                 - name
-                - ports
                 type: object
               type: array
             ingressRules:
@@ -186,9 +186,10 @@ spec:
                       RFC 1123.
                     type: string
                   ports:
-                    description: List of destination ports for outgoing traffic. This
-                      field must not empty. Each item in this list is combined using
-                      a logical OR.
+                    description: List of destination ports for outgoing traffic. If
+                      this field is empty or missing, this rule matches all ports
+                      and protocols. Each item in this list is combined using a logical
+                      OR.
                     items:
                       description: SecurityPolicyPort describes the port and protocol
                         to match in a rule.
@@ -247,7 +248,6 @@ spec:
                     type: object
                 required:
                 - name
-                - ports
                 type: object
               type: array
             priority:
