--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -56,3 +56,20 @@ jobs:
           docker save --output /tmp/lynx-release.tar lynx/release
           sudo k3s ctr images import /tmp/lynx-release.tar
       - run: make deploy-test
+
+  run-e2e:
+    runs-on: [ubuntu-20.04]
+    steps:
+      - uses: actions/checkout@v2
+
+      - name: install e2e environment dependency
+        run: sudo sh -c "apt install -y iperf iputils-arping openvswitch-switch && systemctl start openvswitch-switch"
+
+      - name: allow ssh connect to localhost
+        run: sudo -H sh -c "ssh-keygen -qN '' </dev/zero; cp ~/.ssh/id_rsa.pub ~/.ssh/authorized_keys"
+
+      - name: setup e2e environment
+        run: sudo -H bash tests/e2e/scripts/e2e-setup.sh 127.0.0.1 localhost
+
+      - name: run e2e test cases
+        run: sudo -H make e2e-test
