--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -39,6 +39,15 @@ jobs:
         with:
           files: ./coverage.out
 
+  golint:
+    runs-on: [ubuntu-20.04]
+    steps:
+      - uses: actions/checkout@v2
+      - uses: golangci/golangci-lint-action@v2
+        with:
+          version: v1.29
+          only-new-issues: true
+
   run-deploy:
     runs-on: [ubuntu-20.04]
 
