--- a/.golangci.yml
+++ b/.golangci.yml
@@ -9,6 +9,8 @@ linters-settings:
 run:
   timeout: 10m
   issues-exit-code: 1
+  skip-dirs:
+    - tests/e2e
 
 linters:
   # inverted configuration with `enable-all` and `disable` is not scalable during updates of golangci-lint
